gitlab/registry/ingress.yaml
---
# Source: gitlab/charts/registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: gitlab
  labels:
    app: registry
    chart: registry-0.7.0
    release: gitlab
    heritage: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    cert-manager.io/issuer: "gitlab-issuer"
    cert-manager.io/common-name: "registry.dev.local"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 5000
  tls:
    - hosts:
      - registry.dev.local
      secretName: gitlab-registry-tls
